@@ -454,7 +454,7 @@ vboxSnapshotToolbar.size = 22;
 vboxSnapshotToolbar.disabledString = 'dis';
 // special case for 'clone' button because it is 16px rather than 22px
 vboxSnapshotToolbar.addButtonCSS('clone', {'background-position':'6px 4px'});
-vboxSnapshotToolbar.addButtons('vboxSnapshotToolbar');
+vboxSnapshotToolbar.renderTo('vboxSnapshotToolbar');
 
 vboxInitDisplay('vboxSnapshotToolbar','VBoxSnapshotsWgt');
 
