@@ -654,7 +654,7 @@ if(!$('#vboxPane').data('vboxConfig').enableAdvancedConfig) {
 
 /* Toolbar */
 var vmmToolbar = new vboxToolbar(vmmButtons);
-vmmToolbar.addButtons('vboxMMToolbar');
+vmmToolbar.renderTo('vboxMMToolbar');
 
 /* Actions Menu */
 var vmmMenu = new vboxMenuBar('vboxMMMenu');
